# fastapi-poetry-docker

./: Dockerfile  Makefile  main.py  pyproject.toml
src/: Controller.py
